1998-08-10  Andrew Veliath  <andrewtv@usa.net>

	* ns.c (IDL_ns_ident_to_qstring): If given and IDLN_IDENT,
	  quietly call IDL_IDENT_TO_NS.

	* util.[ch]: Change g_strcase_hash to IDL_strcase_hash (make
	  public).  Add IDL_strcase_equal, IDL_strcase_cmp,
	  load_forward_dcls, resolve_forward_dcls,
	  print_unresolved_forward_dcls, IDL_tree_resolve_forward_dcls.
	  (IDL_parse_filename): Warn on unresolved forward declarations in
	  post-parse semantic checking.  Remove __IDL_tree_print, add
	  IDL_tree_walk_pre_order.

	* IDL.h: Add IDL_tree_walk_pre_order prototype and callback typedef.

1998-08-09  Andrew Veliath  <andrewtv@usa.net>

	* parser.y: enum_type: Don't generate a nested scope.

1998-08-06  Andrew Veliath  <andrewtv@usa.net>

	* Allow for redefinition of certain items in inheritance
	  (doesn't detect some invalid items, but still better than
	  before).
	
	* Change the namespace data structure from a general tree using a
	  linked list to case-insensitive string hashes for each tree
	  level.  Used g_str_hash from glib modified for
	  case-insensitivity (g_strcase_hash).

	* Fix bug where some top-level redeclarations would cause a core
	  dump.

	* Change references to strdup to g_strdup, and update
	  configure.in.
	
	* Begin major cutting for libIDL 0.3, which will have new
	  namespace code.  Move lots of stuff around.

1998-08-05  Andrew Veliath  <andrewtv@usa.net>

	* lexer.l: Change C-language warning level to warning level 2,
	  all other warnings to level 1
	
	* parser.y (yywarning*): Add multiple warning levels

	* IDL.h: Remove IDL_WARNING, add IDL_WARNING1-3 and IDL_WARNINGMAX
	
	* IDL.h: Generate a CPP error if glib.h isn't included beforehand.
	
	* IDL.h, parser.y: Integrate Sebastian Wilhelm's patch to add type
	  cast checking, with a number of style modifications of my own
	  (anything I broke is my fault ;-) for libIDL and add a warning
	  on casting a NULL pointer.

	* lexer.l: Implement Dick's suggestion to warn or error on