@@ -122,6 +122,9 @@ dqstring		\"[^\"\n]*[\"\n]
 	yylval.floatp = atof(yytext);
 	tokreturn(TOK_FLOATP);
 }
+FALSE			tokreturn(TOK_FALSE);
+Object			tokreturn(TOK_OBJECT);
+TRUE			tokreturn(TOK_TRUE);
 any			tokreturn(TOK_ANY);
 attribute		tokreturn(TOK_ATTRIBUTE);
 boolean			tokreturn(TOK_BOOLEAN);
@@ -133,7 +136,6 @@ default			tokreturn(TOK_DEFAULT);
 double			tokreturn(TOK_DOUBLE);
 enum			tokreturn(TOK_ENUM);
 exception		tokreturn(TOK_EXCEPTION);
-FALSE			tokreturn(TOK_FALSE);
 fixed			tokreturn(TOK_FIXED);
 float			tokreturn(TOK_FLOAT);
 in			tokreturn(TOK_IN);
@@ -152,10 +154,9 @@ short			tokreturn(TOK_SHORT);
 string			tokreturn(TOK_STRING);
 struct			tokreturn(TOK_STRUCT);
 switch			tokreturn(TOK_SWITCH);
-TRUE			tokreturn(TOK_TRUE);
 typedef			tokreturn(TOK_TYPEDEF);
-unsigned		tokreturn(TOK_UNSIGNED);
 union			tokreturn(TOK_UNION);
+unsigned		tokreturn(TOK_UNSIGNED);
 void			tokreturn(TOK_VOID);
 wchar			tokreturn(TOK_WCHAR);
 wstring			tokreturn(TOK_WSTRING);
